crates/aranya-policy-compiler/tests/data/type_errors/struct_composition_field_type_mismatch_invalid_type.fail.policy
struct Foo { x int, y bool }
struct Bar { x string }
function baz(b struct Bar) struct Foo {
    let new_foo = Foo {
        y: true,
        ...b
    }

    return new_foo
}
